--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -13,7 +13,7 @@
 }
 
 .c-the {
-	color: #3f367d;
+	color: #ed5e7a;
 	font-size: 28px;
 }
 .c-shop {
@@ -59,7 +59,7 @@
 	/* background-color: aqua; */
 	margin-top: 20px;
 	font-size: 16px;
-	color: rgba(138, 143, 185, 1);
+	color: rgb(242, 135, 151);
 	font-family: "sans-serif", sans-serif;
 	padding: 3px;
 }
