--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,11 +1,54 @@
 .footer-box {
+	background: linear-gradient(89deg, #222222, #39007a);
+	background-size: 400% 400%;
+
+	-webkit-animation: AnimationName 20s ease infinite;
+	-moz-animation: AnimationName 20s ease infinite;
+	animation: AnimationName 20s ease infinite;
+}
+
+@-webkit-keyframes AnimationName {
+	0% {
+		background-position: 0% 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}
+}
+@-moz-keyframes AnimationName {
+	0% {
+		background-position: 0% 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}
+}
+@keyframes AnimationName {
+	0% {
+		background-position: 0% 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}
+}
+
+.footer-box {
 	box-sizing: border-box;
 	width: 100%;
 	height: 350px;
 	margin-left: auto;
 	margin-right: auto;
 	flex-grow: 1;
-	background-color: #222;
+
 	/* padding: 6px 10%; */
 }
 .navLinker {
