--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,87 @@
+@keyframes move {
+	100% {
+		transform: translate3d(0, 0, 1px) rotate(360deg);
+	}
+}
+
+.background {
+	position: fixed;
+	width: 100vw;
+	height: 100vh;
+	top: 0;
+	left: 0;
+	background: #caeaee;
+	overflow: hidden;
+	z-index: -1;
+}
+
+.background span {
+	width: 49vmin;
+	height: 49vmin;
+	border-radius: 49vmin;
+	backface-visibility: hidden;
+	position: absolute;
+	animation: move;
+	animation-duration: 6;
+	animation-timing-function: linear;
+	animation-iteration-count: infinite;
+}
+
+.background span:nth-child(0) {
+	color: #fd5d75;
+	top: 41%;
+	left: 17%;
+	animation-duration: 33s;
+	animation-delay: -180s;
+	transform-origin: -20vw -14vh;
+	box-shadow: -98vmin 0 12.907921855060264vmin currentColor;
+}
+.background span:nth-child(1) {
+	color: #fd5d75;
+	top: 38%;
+	left: 67%;
+	animation-duration: 13s;
+	animation-delay: -384s;
+	transform-origin: 13vw -24vh;
+	box-shadow: 98vmin 0 12.439727490745785vmin currentColor;
+}
+.background span:nth-child(2) {
+	color: #fd5d75;
+	top: 53%;
+	left: 42%;
+	animation-duration: 213s;
+	animation-delay: -83s;
+	transform-origin: -17vw -14vh;
+	box-shadow: -98vmin 0 12.692951730516839vmin currentColor;
+}
+.background span:nth-child(3) {
+	color: #fd5d75;
+	top: 14%;
+	left: 14%;
+	animation-duration: 203s;
+	animation-delay: -423s;
+	transform-origin: -12vw -4vh;
+	box-shadow: 98vmin 0 12.413058459156867vmin currentColor;
+}
+.background span:nth-child(4) {
+	color: #fd5d75;
+	top: 96%;
+	left: 43%;
+	animation-duration: 18s;
+	animation-delay: -114s;
+	transform-origin: 1vw -18vh;
+	box-shadow: -98vmin 0 13.0831494877275vmin currentColor;
+}
+.background span:nth-child(5) {
+	color: #fd5d75;
+	top: 29%;
+	left: 59%;
+	animation-duration: 245s;
+	animation-delay: -295s;
+	transform-origin: 6vw 11vh;
+	box-shadow: -98vmin 0 13.168365687515932vmin currentColor;
+}
+
 .btn-generate,
 .btn-loggedOut-comment {
 	background: linear-gradient(89deg, #222222, #39007a);
@@ -6,6 +90,15 @@
 	-webkit-animation: AnimationName 20s ease infinite;
 	-moz-animation: AnimationName 20s ease infinite;
 	animation: AnimationName 20s ease infinite;
+}
+
+.c-input {
+	background: linear-gradient(89deg, #9e043b, #caeaee);
+	background-size: 400% 400%;
+
+	-webkit-animation: AnimationName 10s ease infinite;
+	-moz-animation: AnimationName 5s ease infinite;
+	animation: AnimationName 10s ease infinite;
 }
 
 @-webkit-keyframes AnimationName {
