--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,5 +1,5 @@
 .footer-box {
-	background: linear-gradient(89deg, #222222, #39007a);
+	background: linear-gradient(89deg, #222, #222);
 	background-size: 400% 400%;
 
 	-webkit-animation: AnimationName 20s ease infinite;
@@ -52,7 +52,7 @@
 	/* padding: 6px 10%; */
 }
 .navLinker {
-	color: #ffffff;
+	color: #caeaee;
 }
 
 .c-the {
@@ -60,7 +60,7 @@
 	font-size: 28px;
 }
 .c-shop {
-	color: #ffffff;
+	color: #caeaee;
 	font-size: 28px;
 }
 
@@ -91,7 +91,7 @@
 	border: solid; */
 	font-size: 24px;
 	font-style: normal;
-	color: #ffffff;
+	color: #caeaee;
 	list-style: none;
 	margin-bottom: 10px;
 }
